--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
         {% block styles %}
+            <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
             <link href="{{ url_for('static', filename='css/webhooks.css') }}" rel="stylesheet">
         {% endblock %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
