--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -71,22 +71,23 @@
         </div>
 
         <!-- React dependencies -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
-        <script type="importmap">
-            {
-                "imports": {
-                    "lucide-react": "https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/lucide.min.js",
-                    "react": "https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js",
-                    "@/components/ui/card": "/static/vendor/shadcn-ui/card.js"
+        {% block scripts %}
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
+            <script type="importmap">
+                {
+                    "imports": {
+                        "lucide-react": "https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/lucide.min.js",
+                        "react": "https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js",
+                        "react-dom": "https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js",
+                        "@/components/ui/card": "/static/vendor/shadcn-ui/card.js"
+                    }
                 }
-            }
-        </script>
-
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="{{ url_for('static', filename='js/common.js') }}"></script>
-        {% block scripts %}{% endblock %}
+            </script>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="{{ url_for('static', filename='js/common.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
