--- a/app/static/css/webhooks.css
+++ b/app/static/css/webhooks.css
@@ -1,42 +1,37 @@
-.table-responsive {
-    overflow-x: hidden;
-}
-
-.table {
-    width: 100%;
-    table-layout: fixed;
-}
-
-.table tbody {
-    width: 100%;
-}
-
 .table th[class*='cursor-pointer']:nth-child(1),
 .table td:nth-child(1) {
-    /* min-width: 150px;
-    max-width: 250px; */
-    width: 15%;
-    white-space: normal;
-    word-wrap: break-word;
+    width: 20%;
+    white-space: nowrap;
 }
 
 .table th[class*='cursor-pointer']:nth-child(2),
 .table td:nth-child(2) {
-    /* min-width: 150px;
-    max-width: 200px; */
-    width: 15%;
+    width: 20%;
     white-space: normal;
     word-wrap: break-word;
 }
 
+.table th[class*='cursor-pointer']:nth-child(3),
 .table td:nth-child(3) {
+    width: 15%;
+    white-space: nowrap;
+}
+
+.table th[class*='cursor-pointer']:nth-child(4),
+.table td:nth-child(4) {
+    width: 15%;
+    white-space: nowrap;
+}
+
+.table td:nth-child(5) {
+    width: 30%;
     padding: 8px;
 }
 
-.table td:nth-child(3) pre {
-    /* white-space: pre-wrap;
-    word-wrap: break-word; */
+.table td:nth-child(5) div {
     max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .webhook-type-buy { 
