moved folders around, added files location as first line in all files, added exchange credential management

--- a/app/templates/partials/_dashboard_modals.html
+++ b/app/templates/partials/_dashboard_modals.html
@@ -1,3 +1,4 @@
+<!-- app/templates/partials/_dashboard_modals.html -->
 <!-- Status Change Modal -->
 <div class="modal fade" id="automationStatusModal" tabindex="-1">
     <!-- Your existing status modal content -->
