--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -1,3 +1,4 @@
+<!-- app/templates/change_password.html -->
 {% extends "base.html" %}
 
 {% block title %}Change Password - Webhook Manager{% endblock %}
